Added mobile responsiveness (max-width 768px)

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,6 @@ div.clear.specials {
     text-align: center;
     cursor: pointer;
     z-index: 2;
-    display: none;
 }
 
 #fixed span {
@@ -53,7 +52,7 @@ div.clear.specials {
 
 header, main, footer {
     max-width: 1440px;
-    min-width: 1280px;
+    /* min-width: 1280px; */
     margin: 0 auto;
     overflow: hidden;
 }
@@ -84,43 +83,56 @@ header {
 }
 
 .header-containter {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
     position: relative;
     max-width: 1440px;
-    min-width: 1280px;
+    height: 100%;
+    /* min-width: 1280px; */
     margin: 0 auto;
-    left: 5%;
+    padding: 40px 60px;
 }
 
 .header-containter .logo {
-    float: left;
-    position: relative;
-    margin: 40px 60px;
+    width: 20%;
+    margin-right: 60px;
+    width: 237px;
+}
+
+.nav-toggle {
+    display: none;
+    cursor: pointer;
 }
 
 .nav-header {
     position: relative;
     display: inline-block;
     border: 3px solid #e1b838;
-    padding: 10px 0;
-    margin-top: 90px;
+    width: 80%;
 }
 
 .nav-header ul {
     list-style-type: none;
     margin: 0px;
-    padding: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 0;
+    text-align: center;
 }
 
 .nav-header ul li {
-    display: block;
-    float: left;
+    flex-grow: 1;
 }
 
 .nav-header ul li a {
+    display: block;
     color: #e1b838;
     font-size: 27px;
     text-decoration: none;
-    padding: 10px 40px;
+    padding: 10px;
 }
 
 .nav-header ul li a:hover {
@@ -187,6 +199,7 @@ header {
     color: #ffffff;
     font-size: 40px;
     font-weight: 300;
+    text-align: center;
 }
 
 #slider .controls {
@@ -230,6 +243,7 @@ header {
 #menu .menu-content {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .menu-content div {
@@ -262,6 +276,10 @@ header {
     padding: 5px 10px;
 }
 
+.menu-content table tr {
+    text-align: left;
+}
+
 .menu-content table td:nth-child(2) {
     text-align: right;
 }
@@ -270,7 +288,13 @@ header {
     margin-top: 0;
 }
 
+.menu-left, .menu-middle, .menu-right {
+    text-align: center;
+}
+
 #promotions {
+    display: flex;
+    flex-wrap: wrap;
     position: relative;
     max-height: 706px;
     background: url('img/bg-3.jpg') no-repeat;
@@ -385,6 +409,7 @@ header {
     top: 250px;
     width: 40%;
     float: right;
+    z-index: 1;
 }
 
 #method table th {
@@ -445,7 +470,7 @@ footer .container {
     height: 300px;
     margin: 0 auto;
     max-width: 1440px;
-    min-width: 1280px;
+    /* min-width: 1280px; */
 }
 
 footer table {
@@ -519,4 +544,197 @@ footer ul.social li.youtube {
 
 .license a:hover {
     color: #ffffff;
+}
+
+@media screen and (max-width: 1024px) {
+    header, main, footer, .header-containter, .container {
+        width: 100%;
+        height: auto;
+        margin: 0 auto;
+    }
+
+    .header-containter {
+        flex-direction: column;
+        padding: 0;
+    }
+
+    .header-containter .logo {
+        margin: 40px 0;
+    }
+
+    .nav-header {
+        margin-bottom: 40px;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    #fixed, .nav-header, .slide-left, .slide-right, #slider .controls .prev, #slider .controls .next, #menu img, #promotions img, #promotions .logo, #promotions .title, #specials .img-1 {
+        display: none;
+    }
+
+    #menu, #events, #specials {
+        background: none;
+    }
+
+    div.clear {
+        height: 20px;
+    }
+
+    .nav-header {
+        width: 100%;
+        border: none;
+    }
+
+    .nav-header ul {
+        flex-direction: column;
+    }
+
+    .nav-toggle {
+        display: block;
+    }
+
+    #slider {
+        height: 300px;
+    }
+
+    table.yellow {
+        font-size: initial;
+        max-width: 350px;
+        min-width: 200px;
+    }
+
+    .slide-content {
+        top: 50px;
+        width: 80%;
+    }
+
+    .slide-text {
+        font-size: initial;
+        top: 170px;
+        width: 100%;
+    }
+
+    #slider .controls {
+        top: 250px;
+    }
+
+    #menu .menu-content {
+        margin-top: 30px;
+    }
+
+    #promotions .promo {
+        float: none;
+        width: 100%;
+        padding: 30px;
+        position: initial;
+    }
+    
+    #specials {
+        text-align: center;
+        padding: 30px;
+        height: 600px;
+    }
+
+    #specials table, #specials p {
+        margin: 0;
+    }
+
+    #specials p {
+        width: 100%;
+        padding: 30px;
+        font-size: initial;
+    }
+
+
+    #specials .img-2 {
+        right: 80px;
+    }
+
+    #specials .img-3 {
+        right: -50px;
+    }
+
+    #method {
+        text-align: center;
+        padding: 30px;
+        height: auto;
+    }
+
+    #method img {
+        position: initial;
+        width: 100%;
+    }
+
+    #method table {
+        display: inline-block;
+        width: 100%;
+        position: initial;
+        float: none;
+    }
+
+    #method table th {
+        font-size: initial;
+    }
+
+    #events {
+        text-align: center;
+        height: auto;
+    }
+
+    #events table {
+        position: initial;
+        margin-top: 30px;
+        display: inline-block;
+        max-width: 250px;
+    }
+
+    #events p {
+        font-size: initial;
+        width: 100%;
+        margin: 0;
+        padding: 30px;
+    }
+
+    #events img {
+        position: relative;
+        top: 5px;
+    }
+
+    footer .logo {
+        margin: 30px 0;
+    }
+
+    footer .container {
+        text-align: center;
+        width: 100%;
+        height: auto;
+    }
+
+    footer table {
+        display: inline-block;
+        margin: 0;
+        float: none;
+        margin: 30px 0;
+    }
+
+    footer .nav-footer ul {
+        text-align: center;
+        font-size: initial;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        float: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    footer .nav-footer ul li {
+        padding: 1em;
+    }
+
+    .license {
+        font-size: initial;
+    }
 }
